--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "shelljs": "^0.2.6",
-    "chokidar": "^0.8.2"
+    "chokidar": "^0.8.2",
+    "damals": "^0.9.0"
   }
 }
