--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "shelljs": "^0.2.6",
     "chokidar": "^0.8.2",
-    "damals": "^0.9.0"
+    "damals": "^0.9.0",
+    "diff": "^1.0.8"
   }
 }
