--- a/package.json
+++ b/package.json
@@ -12,6 +12,14 @@
     "shelljs": "^0.2.6",
     "damals": "^0.9.0",
     "diff": "^1.0.8",
-    "atom-panetastic": "^0.1.1"
+    "atom-panetastic": "^0.1.1",
+    "atom-space-pen-views": "^2.0.3"
+  },
+  "consumedServices": {
+    "status-bar": {
+      "versions": {
+        "^1.0.0": "consumeStatusBar"
+      }
+    }
   }
 }
