--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "shelljs": "^0.2.6",
     "damals": "^0.9.0",
     "diff": "^1.0.8",
-    "atom-space-pen-views": "^2.0.3"
+    "atom-space-pen-views": "^2.0.3",
+    "atom-panetastic": "^0.1.4"
   },
   "consumedServices": {
     "status-bar": {
