--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gradle-ci",
   "main": "./lib/gradle-ci",
   "version": "1.1.1",
-  "description": "Continuous builds with [Gradle](gradle.org)! Adds a CI-like package to your status bar, showing you the last build-status and let you access the latest build-reports.",
+  "description": "Continuous builds with Gradle (http://gradle.org)! Adds a CI-like package to your status bar, showing you the last build-status and let you access the latest build-reports.",
   "repository": "https://github.com/florianb/atom-gradle-ci",
   "license": "MIT",
   "engines": {
